@@ -63,6 +63,7 @@ Date: 2025-12-07
     - Let all octane fluids be voided in the burn-inator.
     - Lowered the amount of processing units express belts take from 2 to 1.
     - Lowered the amount of heavy lube express undergrounds take from 10 to 7.5, but increased its circuit count from 1 to 2.
+    - Modelled vapour icons/"fluid icons that have are a little transparent at the bottom"
 
   Fixes:
     - Fixed the tech icons of all battery equipment.
@@ -74,6 +75,8 @@ Date: 2025-12-07
     - Fixed heat exchanger 2 not producing the correct temp steam.
     - Fixed steam turbines not being able to take higher temp steam.
     - Moved naptha fuel canisters into their own technology, and fixed them being uncraftable until you unlock a different fuel canister.
+    - Gave zinc vapour its own icon.
+    - Gave barium vapour its own icon.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.514
